<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IcedMath</string>
    <string name="txtPuntuacionesAltas">Puntuaciones Altas\n\nPlayer1          00000\nPlayer2          00000\nPlayer3          00000\nPlayer4          00000\nPlayer5          00000</string>
    <string name="txtExtras">Aqui va la sección de extras. \nConsiste en desbolqueables que se obtienen a traves del juego</string>
    <string name="txtAyuda">Aqui va la seccion de Ayuda. \nInforma sobre controles y Items</string>
    <string name="txtAcercaDe">Iced Math\n\nDesarrollado por MadIce DevTeam:\n\nAlejandro Segura		A01162752\nMarlen Aguilar			A01163230\nAlejandro Flores		A01167361\nEdwin González			A01167603\nGuillero Juárez			A01168346\n\nAgradecimientos\n\n</string>
    <string name="lblAventura">Aventura</string>
    <string name="lblModoLibre">ModoLibre</string>
    <string name="lblPuntuacionesAltas">Puntuaciones Altas</string>
    <string name="lblExtras">Extras</string>
    <string name="lblAyuda">Ayuda</string>
    <string name="lblAcercaDe">Acerca De</string>
    <string name="lblGameOver">Has Perdido</string>
    <string name="lblRetry">Intentar de nuevo</string>
    <string name="lblVolverMenu">Volver al menú</string>
    <string name="lblGaleria">Galería</string>
    <string name="lblAudioAdicional">Audio Extra</string>
    <string name="lblFactory">\"Factory\"-Castle Crashers</string>
    <string name="lblSimpleSight">\"Simple Sight\"- Castle Crashers</string>
    <string name="lblSpacePirates">\"Space Pirates\"- Castle Crashers</string>
    <string name="lblShow">\"The Show\"- Castle Crashers</string>
    <string name="lblReproducir">Reproducir</string>
    <string name="lblDetener">Detener</string>
</resources>
