<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout1" android:layout_height="fill_parent">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblVolverMenu" android:layout_below="@+id/btnRetry" android:layout_alignRight="@+id/btnRetry" android:layout_marginTop="27dp" android:layout_alignLeft="@+id/btnRetry" android:id="@+id/btnMenu" android:width="150dp"></Button>
        <Button android:text="@string/lblRetry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/textView1" android:layout_alignBottom="@+id/textView1" android:layout_alignParentRight="true" android:layout_marginRight="79dp" android:id="@+id/btnRetry" android:width="150dp"></Button>
        <TextView android:text="@string/lblGameOver" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="77dp" android:layout_marginTop="66dp"></TextView>
    </RelativeLayout>
    
</LinearLayout>
